scaled-font: Fix documentation examples with incorrect derefs

Bug 24730 -- New: misleading use cases in cairo_scaled_font_text_to_glyphs's docs
http://bugs.freedesktop.org/show_bug.cgi?id=24730

An apparent copy'n'paste error from the code which has to deal with
indirect pointers crept into the documentation for the same functions.